--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,60 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+  <div id="root"></div>
+   <a id="aCube"></a>
+   <a id="bCube"></a>
+   <a id="cCube"></a>
+   <a id="dCube"></a>
+   <a id="eCube"></a>
+   <a id="fCube"></a>
+   <a id="gCube"></a>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  
+    <!-- <audio className = "audio"id ="c" data-key= "51">       
+        <source src = "PeggyGou.mp3" type ="audio/mpeg"></source>
+    </audio>
+
+    <audio className = "audio" id ="d" data-key= "52">       
+        <source src = "PeggyGou.mp3" type ="audio/mpeg"></source>
+    </audio> -->
+
+   
+    <div id ="outer">
+      <div id= "inner">
+    <button id="nightMode">Night Mode</button>
+    <button id="sadMode">Sad Mode</button>
+    <button id="angryMode">Angry Mode</button>
+
+    <audio id = "audio" controls></audio>
+
+    <button id="normal">relax </button> </button>
+
+     
+    
+<button id="append button"></button>
+    <!-- <a className= "dot"></a> -->
+    <!-- <audio id="recordedAudio"></audio> -->
+    <button id="record">record</button>
+    <button id="stoprecording">stop recording</button>
+
+    <audio className = "audio"id ="b" data-key= "50">       
+        <source src = "normal.mp3" type ="audio/mpeg"></source>
+    </audio>
+
+  </div>
+</div>
+
+<!-- <div id ="animation1" class="animated infinite bounce delay-2s" ><div></div> -->
+</body> 
+  <!-- // recorder.start()
+    // Tone.Transport.start() -->
+
 </html>
