added save modal

--- a/public/index.html
+++ b/public/index.html
@@ -39,11 +39,11 @@
 
      
     
-<button id="append button"></button>
+<!-- <button id="append button"></button> -->
     <!-- <a className= "dot"></a> -->
     <!-- <audio id="recordedAudio"></audio> -->
-    <button id="record">record</button>
-    <button id="stoprecording">stop recording</button>
+    <button id="record">record your song</button>
+    <!-- <button className =" ui button"id="stoprecording">stop recording</button> -->
 
     <audio className = "audio"id ="b" data-key= "50">       
         <source src = "normal.mp3" type ="audio/mpeg"></source>
