--- a/public/index.html
+++ b/public/index.html
@@ -16,45 +16,28 @@
    <a id="fCube"></a>
    <a id="gCube"></a>
 
-
-  
-    <!-- <audio className = "audio"id ="c" data-key= "51">       
-        <source src = "PeggyGou.mp3" type ="audio/mpeg"></source>
-    </audio>
-
-    <audio className = "audio" id ="d" data-key= "52">       
-        <source src = "PeggyGou.mp3" type ="audio/mpeg"></source>
-    </audio> -->
-
    
     <div id ="outer">
       <div id= "inner">
-    <button id="nightMode">Night Mode</button>
-    <button id="sadMode">Sad Mode</button>
-    <button id="angryMode">Angry Mode</button>
+    <button id="nightMode">night mode</button>
+    <button id="sadMode">sad mode</button>
+    <button id="angryMode">angry mode</button>
+    <button id="happyMode">happy mode </button> </button>
+    <button id="normal">moodless</button>
 
-    <audio id = "audio" controls></audio>
+    <button id="record">record </button>
 
-    <button id="normal">relax </button> </button>
-
-     
-    
-<!-- <button id="append button"></button> -->
-    <!-- <a className= "dot"></a> -->
-    <!-- <audio id="recordedAudio"></audio> -->
-    <button id="record">record your song</button>
-    <!-- <button className =" ui button"id="stoprecording">stop recording</button> -->
-
-    <audio className = "audio"id ="b" data-key= "50">       
-        <source src = "normal.mp3" type ="audio/mpeg"></source>
+    <!-- <button id= "stoprecording">stop recording</button>  -->
     </audio>
 
   </div>
 </div>
+<div id ="outer-2">
+  <div id ="inner-2">
+<audio id = "audio" controls></audio>
+</div>
+</div>
 
-<!-- <div id ="animation1" class="animated infinite bounce delay-2s" ><div></div> -->
 </body> 
-  <!-- // recorder.start()
-    // Tone.Transport.start() -->
 
 </html>
