--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300&display=swap" rel="stylesheet">
+
+
+
   </head>
   <body>
   <div id="root"></div>
@@ -24,10 +27,9 @@
     <button id="angryMode">angry mode</button>
     <button id="happyMode">happy mode </button> </button>
     <button id="normal">moodless</button>
+    <button id="stoprecording"> stop recording</button>
 
     <button id="record">record </button>
-
-    <!-- <button id= "stoprecording">stop recording</button>  -->
     </audio>
 
   </div>
